# mumble-json-bridge

./: .azure-pipelines.yml  .gitmodules  .travis.yml  CMakeLists.txt  README.md  vcpkg.json
.ci/azure/: build_windows.bat  install_windows.bat  test_windows.bat
.ci/travis/: build_unix.sh  install_linux.sh
.github/workflows/: build.yml  pr-checks.yml
cli/: CMakeLists.txt  Instruction.h  JSONInstruction.cpp  JSONInstruction.h  JSONInterface.cpp  JSONInterface.h  README.md  handleOperation.cpp  handleOperation.h  main.cpp
cli/operations/: get_local_user_name.yaml  move.yaml  move_local_user.yaml  toggle_local_user_deaf.yaml  toggle_local_user_mute.yaml
cmake/: FindPython3Interpreter.cmake
json_bridge/: CMakeLists.txt  README.md
json_bridge/include/mumble/json_bridge/: Bridge.h  BridgeClient.h  MumbleAssert.h  NamedPipe.h  NonCopyable.h  Util.h
json_bridge/include/mumble/json_bridge/messages/: APICall.h  Message.h  Registration.h
json_bridge/src/: Bridge.cpp  BridgeClient.cpp  MumbleAssert.cpp  NamedPipe.cpp  Util.cpp
json_bridge/src/messages/: APICall.cpp  APICall_handleImpl.cpp  Disconnect.cpp  Message.cpp  Registration.cpp
json_bridge/tests/: CMakeLists.txt
json_bridge/tests/bridgeCommunication/: API_mock.cpp  API_mock.h  API_v_1_0_x_mock.cpp  API_v_1_0_x_mock.h  CMakeLists.txt  test_bridgeCommunication.cpp
json_bridge/tests/pipeIO/: CMakeLists.txt  test_pipeIO.cpp
plugin/: CMakeLists.txt  README.md  plugin.cpp
scripts/: generate_APICall_implementation.py  generate_CLI_operations.py  runClangFormat.sh
